# jupyter-gen

./: .env.example  .gitignore  AGENTS.md  README.md  features.md  pyproject.toml
.codex/: AGENTS.md
mcp2/tools/: search.py
src/: config.py  prompts.py
src/agents/: __init__.py  agent.py
src/mcp2/: config.py
src/mcp2/tools/: search.py  voice.py
src/misc/: simple_jupyter_mcp.py
src/tools/: search.py  voice.py
src/utils/: telemetry.py
